[tool.poetry]
name = "wristpy"
version = "0.2.0"
description = "wristpy is a Python package designed for processing and analyzing wrist-worn accelerometer data."
authors = [
  "Adam Santorelli <adam.santorelli@childmind.org>",
  "Florian Rupprecht <florian.rupprecht@childmind.org>",
  "Freymon Perez <freymon.perez@childmind.org>",
  "Greg Kiar <gregory.kiar@childmind.org>",
  "Reinder Vos de Wael <reinder.vosdewael@childmind.org>"
]
license = "LGPL-2.1"
readme = "README.md"
packages = [{include = "wristpy", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
polars = "^1.21.0"
scikit-learn = "^1.4.1.post1"
pyarrow = ">=18,<21"
actfast = "^1.1.0"
numpy = ">=1.26.0, <3.0.0"
pydantic = "^2.11.1"
pydantic-settings = "^2.3.4"
scipy = "^1.13.0"
scikit-digital-health = "^0.17.9"
typer = ">=0.15.2,<0.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.14.1"
pre-commit = "^4.0.1"
pytest-cov = ">=5,<7"
ruff = ">=0.7.1,<0.9.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^15.0.0"

[tool.poetry.scripts]
wristpy = "wristpy.__main__:run_main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I", "INP"]
ignore = [
  "ANN101",  # self should not be annotated.
  "ANN102"  # cls should not be annotated.
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
